# se-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial_users.py
src/app/: __init__.py  factory.py  main.py
src/app/api/: __init__.py  deps.py  errors.py  router.py
src/app/api/v1/: __init__.py  auth.py  router.py  users.py
src/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
src/app/db/: __init__.py  bootstrap.py  health.py  session.py
src/app/models/: __init__.py  base.py  user.py
src/app/repositories/: __init__.py  base.py  user_repository.py
src/app/schemas/: __init__.py  auth.py  common.py  user.py
src/app/services/: __init__.py  auth_service.py  user_service.py
tests/: conftest.py  factories.py
tests/integration/: test_auth_api.py  test_health.py  test_rbac.py  test_users_api.py
tests/unit/: test_auth_service.py  test_security.py  test_user_service.py
