[project]
name = "se-challenge"
version = "0.1.0"
description = "User Management REST API - Advana Software Engineer Challenge"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Santiago" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers[postgresql]>=4.8.0",
    "freezegun>=1.5.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "C4", "SIM", "RET", "ARG"]
ignore = ["B008", "S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "ARG001"]
"migrations/**/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: unit tests with mocked deps",
    "integration: integration tests hitting real DB",
]

[tool.coverage.run]
source = ["src/app"]
omit = ["src/app/main.py", "migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "slowapi.*"]
ignore_missing_imports = true
